# text2sql

./: .gitignore  README.md  docker-compose.yml  plan.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_auth_schema.py  002_logistics_schema.py  003_seed_mock_data.py  004_expand_mock_data.py  005_add_more_mock_data.py
backend/src/app/: config.py  main.py
backend/src/app/agent/: __init__.py  debug.py  decorators.py  graph.py  state.py  visualization.py
backend/src/app/agent/nodes/: __init__.py  classification.py  general_response.py  permission_pre_check.py  query_execution.py  query_generation.py  query_validation.py  response_formatting.py  schema_retrieval.py  user_confirmation.py
backend/src/app/api/: dependencies.py
backend/src/app/api/routes/: auth.py  chat.py  graph.py  health.py  schema.py  session.py
backend/src/app/auth/: __init__.py  dependencies.py  jwt.py  password.py  permissions.py
backend/src/app/database/: __init__.py  connection.py  executor.py  schema.py
backend/src/app/errors/: __init__.py  exceptions.py  handlers.py  messages.py
backend/src/app/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py
backend/src/app/models/: __init__.py  auth.py  entities.py  requests.py  responses.py
backend/src/app/session/: __init__.py  manager.py
backend/src/app/validation/: __init__.py  keyword_validator.py  schema_validator.py  semantic_validator.py
backend/tests/: conftest.py
backend/tests/contract/: test_chat_api.py  test_confirm_api.py
backend/tests/integration/: test_conversation_context.py  test_dangerous_query_blocking.py  test_error_handling.py  test_human_in_loop.py  test_query_generation.py
backend/tests/unit/: test_error_messages.py  test_keyword_validator.py  test_schema_validator.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useSession.ts
frontend/src/pages/: ChatPage.tsx  GraphPage.tsx  GuidePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: index.ts
frontend/src/utils/: typeChecks.ts
specs/1-text2sql-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-text2sql-agent/checklists/: requirements.md
(+20 files in other folders)
